# slither-api

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
src/: app.py  controller.py  decorators.py  methods.py  module.py  router.py  utils.py
src/interfaces/: controller.py
